
2025-01-09: Changed regular gamemode value for seasonalType to be "" instead of null, so that we can differentiate
	it from being normal or unknown

2025-01-09: Added transient field `readVersion` to HeatmapNew that lets you know the serialization version it was read
	from. Also refactored HeatmapNew.fileNamingSchemeFix(). P.S no idea why that function is in HeatmapNew and not HeatmapFile

----You are Here----

TODO: When contaminated files are moved to the leagues folder, their metadata is not updated. This will need to be fixed
	because the global heatmap will require the "seasonalType" field and stuff to be set

TODO: I suppoooose I should add a time zone calculation based on the local time to the leagues V beginning date
	to minimize the chance of somebody's data getting quarantined for no reason

TODO: check out how LootManager sent their in-game update message to the chatbox in all red	text

TODO: Test for carrying over V1 heatmaps (and V2 ig)

TODO: Test for switching actual accounts (I Say)

TODO: Test on Windows

TODO: Test logging into Leagues V first and then switching to a normal account

TODO: Remove any temporary log.debugs()

** UPDATE TO BE RELEASED **

TODO: Refactor the heatmap file management because it kinda make no sense now. All the file-related stuff should be in
	HeatmapFile. Perhaps all HeatmapNew needs is the .toCSV() and .fromCSV(). Or, perhaps I should just implement
	Serializable properly this time, and change .toCSV() and .fromCSV() to

TODO: LOOT_VALUE is kinda useless because it's dependent on both the amount of loot dropped by each NPCs, and the frequency at which people kill them.
	Not sure if it's possible, but an AVERAGE_LOOT_VALUE would be much more informative. However, I suppose that would be information that is already available on the wiki.

TODO: Update world map image

TODO: Large: Start tracking heatmaps in 3 dimensions? Would have to convert existing heatmaps, and the existing data would be mucked.
